add button for new card

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
         <h1 id="card-greeting"></h1>
         <h3 id="card-event"></h3>
         <p  id="card-message"></p>
+        <form id="newCard" class="hideForm">
+            <input type="submit" value="Make new card">
+        </form>
     </section>
 </body>
 </html>
