--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./static/css/style.css">
     <script defer src="./bundle.js"></script>
     <title>Celebration Card</title>
+    <link rel="shortcut icon" href="./static/PartyPopper.png" type="image/x-icon">
 </head>
 <body>
     <form class="showForm">
