--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
             <label for="message">Message:</label>
             <textarea name="message" id="message" cols="30" rows="2"placeholder="Enter your message!"></textarea>
         </section>
-        <br>
-        <input type="submit" value="Generate card!">
+        <section>
+            <input type="submit" value="Generate card!">
+        </section>
     </form>
     <section id="card">
         <h1 id="card-greeting"></h1>
