add api fetch for random cat background

--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
         </section>
     </form>
     <section id="card" class="hideItem">
-        <h1 id="card-greeting"></h1>
-        <h3 id="card-event"></h3>
-        <p id="card-message"></p>
+        <div id="card-body">
+            <h1 id="card-greeting"></h1>
+            <h3 id="card-event"></h3>
+            <p id="card-message"></p>
+        </div>
         <form id="newCard">
             <input type="submit" value="Make new card">
         </form>
